add : shell basic operators

--- a/team-blog/vuepress-power/docs/group/g1.md
+++ b/team-blog/vuepress-power/docs/group/g1.md
@@ -16,7 +16,7 @@
 5. 每个二级目录，对应一个技术栈或者技术主题，主题内部`README.md`首先需要介绍，该主题的建立原因（从何而来）和必备环境准备
 6. 执行`init.sh`, 下载各个目录的安装环境
 7. 执行`auto_agg.sh`, 自动聚集各个文档目录，将其收集到博客生成器，并部署博客到公网
-
+8. 力求描述清楚问题，并列举其解决办法
 
 #### 项目说明
 .
