--- a/team-blog/hexo-power/source/_posts/2022-01-25-shell-1.md
+++ b/team-blog/hexo-power/source/_posts/2022-01-25-shell-1.md
@@ -1,99 +1,27 @@
 ---
-title: shell之用 (1)
+title: Shell之用 (一)
 date: 2022-01-25 17:01:52
 categories:
     - [Programming]
 tags:
     - shell
+    - knowledge
 ---
-
 {% asset_img banner-image banner.png 550rem 370rem "shell-image'banner'" %}
-
 ### 概念分辨
-Shell 是什么? 初入Unix/Linux生态时，由于认知和操作习惯所限，完全没办法搞清楚在操作上Shell和与之密切相关的`Terminal/iTerm`、`tty`、`xterm` 、`console`等之间到底是什么关系，再加上shell的变种又有`Bourne Shell(sh)`、`C Shell(csh)`、`Korn Shell`、`TENEX C Shell(tcsh)`、`Bourne Again Shell(bash)`等，以至于配置一个 `Oh my zsh!`都觉得劳心费力，处处碰壁，是时候把这些东西梳理清楚了。
-
+Shell 是什么? 初入Unix/Linux生态时，由于认知和操作习惯所限，完全没办法搞清楚在操作上Shell和与之密切相关的`Terminal/iTerm`、`tty(电传打字机Teletypewriter)`、`xterm` 、`console`等之间到底是什么关系，再加上Shell的变种又有`Bourne Shell(sh)`、`C Shell(csh)`、`Korn Shell(ksh)`、`TENEX C Shell(tcsh)`、`Bourne Again Shell(bash)`等，以至于配置一个 `Oh my zsh!`都觉得劳心费力，处处碰壁，是时候把这些东西梳理清楚了，只有清楚地知道他们的渊源和边界，才能游刃有余，从心所欲。
 <!-- more -->
+其实，就我的理解来说，`Shell`这个词和`Application`、`System`一样，都是一个领域描述词汇，就像我们说`iOS App`、`Android App`一样，我们还可以有更多的“Shell”，比如 ： `JS Shell`，用来交互式执行JavaScript，`Shell`一词只是表达了一种和操作系统之间的交互方式，是要通过*特定语法*的脚本，调用系统内核功能。有了交互语法结构(*当然这些语法就是上述各种变种的Shell程序进行解析执行的*)，还要有承载体，也就是相当于编码时要使用的各种`记事本`、`编辑器`或者`IDE`，那么`Terminal`就是一种编辑器的“形式或容器”（*粗俗理解叫UI框架*），真正的实现可以是`nano`、`vim`以及`emacs`这些编辑器，也有“非主流”的编辑器——流编辑器，如`sed`，提供支持丰富文本和文件编辑功能的编辑能力，所以类似的，从历史上看，有各种形式的交互容器（*这么看其实显示器本身又是更低层次的容器了*），关于这些这些花式各样的“承载体”的历史，[见连接🔗>>](https://www.zhihu.com/question/21711307), 有趣的是这个[电脑博物馆](https://www.compumuseum.com/), 所以其他的就好理解了`Oh my zsh!`要实现定制交互UI的能力，需要同时控制`Terminal`的主题(如：背景、字体等) 和 `Z Shell`的功能扩展(如：命令历史、git短语等)，所以那些配置也就相当好理解了。
+### 实践真知
+如果要想快速掌握Shell，最简单的方法就是用它，通过触感建立具象认识，才能克服距离感、无力感，所以我们一起解剖一个“实例” —— [《V2ray的自动安装脚本》](https://raw.githubusercontent.com/wulabing/V2Ray_ws-tls_bash_onekey/master/install.sh) 的自我简化版，来熟悉一下`Shell`的基本使用，更多高级用法，全看当前操作系统的安装支持的丰富性决定啦！
+目前的需求是，我想不用自己从头写，从而去V2ray的安装脚本中，摘出一些功能，实现自动配置域名证书，到期自动更换的需求，摘出并更改后的完成脚本见[coding-space >> base-shell](https://github.com/we-run/coding-space/blob/master/base-shell/ssl_cert_admin.sh)（建议使用VS Code，安装Shell插件），具体分为一下几个步骤：
+1. 入口定义
+2. 证书申请
+3. Nginx 配置生成和编辑
+4. 定时任务
+5. 提示语封装
 
-### 知识背景
-
-
-
-### 使用场景
-
-
-### 经典用法
-1. 自定义配置
-   - 主题
-   - 功能
-2. 语法句法
-3. 经典用例
-
-
-
-
-Welcome to [Hexo](https://hexo.io/)! This is your very first post. Check [documentation](https://hexo.io/docs/) for more info. If you get any problems when using Hexo, you can find the answer in [troubleshooting](https://hexo.io/docs/troubleshooting.html) or you can ask me on [GitHub](https://github.com/hexojs/hexo/issues).
-### 
-
-## Quick Start
-
-### Create a new post
-
-``` bash
-$ hexo new "My New Post"
-```
-
-{% codeblock _.compact http://underscorejs.org/#compact Underscore.js %}
-_.compact([0, 1, false, 2, '', 3]);
-=> [1, 2, 3]
-{% endcodeblock %}
-
-#### 创建文章纪实
-
-1. 目录分布 - source 目录下分别存放 `./_draft` 、`_posts` 、`自定义页面命名的文件目录`
-2. 新建文件， 三种方式
-   - 草稿模式 ： 可以使用 `draft` 参数指定markdown文件创建模板来源（`./scaffolds/draft.md` 模板）
-   - 单页面模式 ： 
-   - 文章模式 ：
-   - 以上模板，均可以指定自己的布局条件
-3. `post_asset_folder`设置参数，开启 `Asset` 文件目录，管理多媒体文件内容
-   - 开启资源目录，每次新建文件命令(`hexo new [layout] title`会自动为其创建一个文件夹，与文件名称一致)
-   - 可以使用相对路径引用标签插件, 也可以通过`marked`选项开启markdown普通图片标记中使用相对目录，直接引用图片
-4. 标签和分类别名的使用 : 如果配置的别名映射， 则地址栏，在显示标签和分类页面的时候，会使用别名进行标记URL
-5. 调研查看模板引擎
-   - [nunjucks](https://mozilla.github.io/nunjucks/)， [github](https://github.com/mozilla/nunjucks)
-   - [jade]()
-   - [swig]() 已废多年
-
-More info: [Writing](https://hexo.io/docs/writing.html)
-
-### Run server
-
-``` bash
-$ hexo server
-```
-
-More info: [Server](https://hexo.io/docs/server.html)
-
-### Generate static files
-
-``` bash
-$ hexo generate
-```
-
-More info: [Generating](https://hexo.io/docs/generating.html)
-
-### Deploy to remote sites
-
-``` bash
-$ hexo deploy
-```
-
-More info: [Deployment](https://hexo.io/docs/one-command-deployment.html)
-
-
-
-## 计算机奠基者
-
-1. John von Neumann
-{% asset_link Joh_von_Neumann.gif %}
+---
+我们每篇博客都会纪念一位计算机贡献科学家，本篇纪念 —— Joh von Neumann （约翰·冯·诺依曼）
+<!-- {% asset_link Joh_von_Neumann.gif %} -->
 {% asset_img Joh_von_Neumann.gif %}
